# KiCad-Lib

./: .gitignore  .mcp.json  7Sigma.kicad_sym  CLAUDE.md  Passives.kicad_sym  README.MD  component_validator.py  easyeda_importer.py  lib.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_tests.sh  symbol_generator.py  update_footprints_models.py  yaml_parser.py
.claude/: settings.json
.github/: copilot-instructions.md
3DModels/: 1551RFL.stp  1551XFL.stp  1556CGY.stp  430152070826 (rev1).stp  ANT-TH_L9.0-W9.0_BWGNSCNX9-9W2.wrl  BAT-TH_HU2032-LF.step  BAT-TH_HU2032-LF.wrl  CAP-SMD_BD6.3-L6.6-W6.6-LS7.2-FD.step  CASE-E_L7.3-W4.3-H4.1.step  CR_W34FAS_VIS.step  DSBGA-20_L2.1-W1.7-R4-C5-P0.40-BL.step  DSBGA-9_L1.6-W1.6-R3-C3-P0.50-TL.step  FUSE-TH_L24.4-W9.4-H11.5-P22.60.wrl  HDR-TH_2P-P2.54-M-WI-1X2P.wrl  HVSSOP-10_L3.0-W3.0-P0.50-LS4.9-BL-EP.step  HVSSOP-10_L3.0-W3.0-P0.50-LS4.9-BL-EP.wrl  IDC-SMD_10P-P1.27-3220-10-0300-00.step  LED-SMD_3P-L3.5-W3.5-R-RD-C.step  LED-SMD_3P-L3.85-W3.85-XL-TD3838UVA1-A4.step  LED-SMD_4P-L1.3-W1.3-P0.80_WS2812E-1313.step  LGA-97_L10.5-W8.3-P0.60-TL.step  MIC-SMD_5P-L3.0-W4.0-P0.85-BL.step  NID65-20241008.stp  RJ45-TH_L15.9-W15.1-H12.6.wrl  SIM-SMD_NANO-SIM-TL6P-H1.35.wrl  SMA_L4.3-W2.5-H2.1-LS5.0.step  SMA_L4.3-W2.5-H2.1-LS5.0.wrl  SMD_BD5.6-D4.1.step  SON-12_L4.0-W2.5-H1-P0.40-BL-EP.step  SON-12_L4.0-W2.5-H1-P0.40-BL-EP.wrl  SOT-523-3P_L1.6-W0.8-H0.9-LS1.6-P0.50.step  SW-SMD_4P-L3.0-W2.6-P1.80-LS3.5.step  SW-SMD_4P-L4.2-W3.2-P2.15-LS4.5.wrl  WIFIM-SMD_38P-L19.2-W18.0-H3.2-P1.27.wrl  (+1 more)
Footprints/: CLAUDE.md
(+475 files in other folders)
